--- a/ceremony.html
+++ b/ceremony.html
@@ -49,10 +49,10 @@
 		<p>Maecenas porta nulla eget eros pharetra ullamcorper. Maecenas tortor erat, egestas id viverra non, volutpat at nunc. Donec luctus, nisi vitae semper fermentum, lorem libero elementum justo, ac congue leo augue eget erat.</p>
 
 		<ul class="ceremony_location">
-			<li><i class="fa fa-map-marker fa-lg"></i>  <a href="http://www.landsendinn.com/" target="_blank">Land's End Inn</a>, 22 Commercial Street, Provincetown, Ma 02657</li>
-			<li><i class="fa fa-mobile fa-2x"></i>  (555) 555- 32-23</li>
-			<li>(555) 555- 32-23</li>
-			<li><i class="fa fa-envelope fa-lg"></i>  <a href="">sales@bestwebsoft.com</li>
+			<li><i class="fa fa-map-marker fa-2x"></i> <span> <a href="http://www.landsendinn.com/" target="_blank">Land's End Inn</a>, 22 Commercial Street, Provincetown, Ma 02657</span></li>
+			<li><i class="fa fa-mobile fa-2x"></i> <span> (555) 555-6875<br>
+			(555) 555-6875</span></li>
+			<li><i class="fa fa-envelope fa-lg"></i> <span> <a href="">sales@bestwebsoft.com</span></li>
 		</ul>
 	</div>
 	<!-- GOOGLE MAP -->
