--- a/index.html
+++ b/index.html
@@ -25,9 +25,7 @@
 			<p class="header__weddingDate">August 21st, 2012. Green Garden Palace.</p>
 		</div>
 
-		<div class="header__social">
-			<a href=""><img src="images/twitter.png"></a>
-		</div>
+		
 
 	</header>
 
@@ -53,7 +51,7 @@
 
  	</div>
 
- 	<section class="quick-info cf">
+ 	<div class="quick-info cf">
 
  	<div class="memories">
  		<h2 class="grey-heading">This is the est moment in our Life!</h2>
@@ -70,7 +68,7 @@
  		<h2>Where?</h2>
  		<p>The ceremony will be held at <a href="ceremony.html">Green Garden Palace</a>, found at 13 Springhill ave., West Chesterfield, New London.</p>
 		
-		<a class="button orange-button">View on Map</a>
+		<a href="http://google.com/maps" class="button orange-button popup">View on Map</a>
 	
 
  </div>
@@ -99,6 +97,7 @@
 
 		</div>	
  	</div>
+ </div>	
 
  	</section>	
 <footer class="footer">
